Fixes env ignored when run in GraalVM.
Pragmatic choice: Don't init statically. This is not perfect, but a very simple solution. Plus: Unit tests are now also much easier.